# Multi-Document-Agent

./: .gitignore  analyzer.py  app.py  build-installer.bat  charts.py  check-env.bat  entity_extractor.py  excel_writer.py  executor.py  generate_icons.py  llm.py  mcp_tools.py  memory.py  planner.py  prompts.py  requirements.txt  router.py  run.bat  schema.py  schema_profiler.py  search_validator.py  server.py  sessions.py  setup.bat  start-app-hidden.vbs  start-app.bat  start-app.vbs  synthesizer.py  utils.py  verification.py
core/: __init__.py  context_compiler.py  reference_resolver.py  snapshot.py  workspace_manager.py  workspace_memory.py  workspace_objects.py
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  store.ts  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: backend.rs  main.rs
desktop/src/components/: BootSplash.tsx  ChartViewer.tsx  ChatPanel.tsx  ExecutionLog.tsx  FileDropZone.tsx  Message.tsx  OnboardingModal.tsx  ReportViewer.tsx  RightPanel.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx
desktop/src/lib/: api.ts  tauri.ts
loaders/: __init__.py  base_loader.py  csv_loader.py  excel_loader.py  loader_router.py  normalize.py
loaders/docx/: __init__.py  docx_loader.py
loaders/ocr/: __init__.py  confidence_manager.py  image_preprocessor.py  layout_reconstructor.py  ocr_loader.py  ocr_models.py
(+1 files in other folders)
