[package]
name = "spreadsheet-agent"
version = "0.1.0"
description = "Autonomous Spreadsheet Intelligence — local-first Windows desktop client"
authors = ["You"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri        = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs     = "2.0"
tauri-plugin-shell  = "2.0"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
tokio        = { version = "1", features = ["full"] }
reqwest      = { version = "0.12", features = ["json", "blocking"] }
once_cell    = "1.20"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
